syntax = "proto3";

import "graph_schema.proto";
import "google/protobuf/any.proto";

option java_package = "org.neo4j.graphalgo.core.model.proto";
option java_outer_classname = "ModelProto";


message ModelMetaData {
  string creator = 1;
  repeated string sharedWith = 2;
  string name = 3;
  string algoType = 4;
  GraphSchema graphSchema = 5;
  ZonedDateTime creationTime = 6;

  google.protobuf.Any trainConfig = 7;

  google.protobuf.Any customInfo = 8;
}

message TrainingConfig {
  int32 batchSize = 1;
  int32 minEpochs = 2;
  int32 maxEpochs = 3;
  int32 patience = 4;
  double tolerance = 5;
  int32 concurrency = 7;
}

message ZonedDateTime {
  int64 seconds = 1;
  int32 nanos = 2;
  string zoneId = 3;
}
